@@ -5361,7 +5361,7 @@ SEXP attribute_hidden do_url(SEXP call, SEXP op, SEXP args, SEXP env)
     const char *url, *open;
     int ncon, block, raw = 0, defmeth,
 	meth = 0, // 0: "internal" | "wininet", 1: "libcurl"
-	winmeth;  // 0: "internal", 1: "wininet" (Windows only)
+	winmeth = 0;  // 0: "internal", 1: "wininet" (Windows only)
     cetype_t ienc = CE_NATIVE;
     Rconnection con = NULL;
 
@@ -5430,7 +5430,7 @@ SEXP attribute_hidden do_url(SEXP call, SEXP op, SEXP args, SEXP env)
 //#endif
     if (streql(cmeth, "wininet")) {
 #ifdef Win32
-	winmeth = 1;  // it already was as this is the default
+	winmeth = 1;
 #else
 	error(_("method = \"wininet\" is only supported on Windows"));
 #endif
@@ -5496,8 +5496,13 @@ SEXP attribute_hidden do_url(SEXP call, SEXP op, SEXP args, SEXP env)
 	    error("url(method = \"libcurl\") is not supported on this platform");
 # endif
 	} else {
+	    if(!winmeth)
+		error(_("the 'internal' method of url() is defunct for http:// and ftp:// URLs"));
+#ifdef Win32
+	    // so for "wininet' only
 	    con = R_newurl(url, strlen(open) ? open : "r", headers_flat, winmeth);
 	    ((Rurlconn)con->private)->type = type;
+#endif
 	}
     } else {
 	if(PRIMVAL(op) == 1) { /* call to file() */
